--- a/example-2/demo.html
+++ b/example-2/demo.html
@@ -29,7 +29,7 @@
 
 <body>
 <div id="app">
-	<label for="myDate">Do u love me ?</label>
+	<label for="myDate">DEMO</label>
 	<div class="wrap">
 		<my-switch size="sm" v-model="toggle"></my-switch>
 	</div>
@@ -43,19 +43,36 @@
 		<my-switch size="sm" v-model="toggle" color="green"></my-switch>
 	</div>
 	<div class="wrap">
+		<my-switch size="sm" v-model="toggle" color="#f1ae45"></my-switch>
+	</div>
+	<div class="wrap">
+		<my-switch size="sm" v-model="toggle" color="green" v-bind:locked="true"></my-switch>
+	</div>
+	<div class="wrap">
+		<my-switch v-model="toggle" v-bind:locked="true"></my-switch>
+	</div>
+	<div class="wrap">
 		<my-switch v-model="toggle"></my-switch>
 	</div>
 	<div class="wrap">
-		<my-switch open-name="Yes" close-name="No" color="blue"
+		<my-switch v-model="toggle"></my-switch>
+	</div>
+	<div class="wrap">
+		<my-switch on-label="Yes" off-label="No" color="blue"
 			 v-model="toggle"></my-switch>
 	</div>
 	<div class="wrap">
-		<my-switch open-name="爱哦" close-name="不爱" size="lg" color="orange"
-			 v-model="toggle"></my-switch>
+		<my-switch on-label="Do" off-label="Don't" size="lg" color="orange" v-model="toggle"></my-switch>
 	</div>
 	<div class="wrap">
-		<my-switch open-name="Love" close-name="Hate" size="lg" color="green"
-			 v-model="toggle"></my-switch>
+		<my-switch on-label="Love" off-label="Hate" size="lg" color="green" v-model="toggle"></my-switch>
+	</div>
+	<div class="wrap">
+		<my-switch on-label="Love" off-label="Hate" size="lg" color="green" v-model="toggle" v-bind:locked="true"></my-switch>
+	</div>
+
+	<div class="wrap">
+		<my-switch on-label="" off-label="" size="xl" color="green" v-model="toggle" v-bind:locked="true"></my-switch>
 	</div>
 </div>
 
